// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead one - portrait - 768 1`] = `
<TabletContentContainer>
  <View>
    <Text>
      lead
    </Text>
  </View>
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`2. front lead one - portrait - 810 1`] = `
<TabletContentContainer>
  <View>
    <Text>
      lead
    </Text>
  </View>
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`3. front lead one - portrait - 834 1`] = `
<TabletContentContainer>
  <View>
    <Text>
      lead
    </Text>
  </View>
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`4. front lead one - portrait - 1024 1`] = `
<TabletContentContainer>
  <View>
    <Text>
      lead
    </Text>
  </View>
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`5. front lead one - landscape - 1024 1`] = `
<TabletContentContainer>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "75%",
          },
          "tile": <ExampleChild
            id="lead"
          >
            lead
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "backgroundColor": "#f0eedf",
            "marginLeft": 10,
            "width": "24%",
          },
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`6. front lead one - landscape - 1080 1`] = `
<TabletContentContainer>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "75%",
          },
          "tile": <ExampleChild
            id="lead"
          >
            lead
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "backgroundColor": "#f0eedf",
            "marginLeft": 10,
            "width": "24%",
          },
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`7. front lead one - landscape - 1366 1`] = `
<TabletContentContainer>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": Object {
            "width": "82%",
          },
          "tile": <ExampleChild
            id="lead"
          >
            lead
          </ExampleChild>,
        },
        Object {
          "style": Object {
            "backgroundColor": "#f0eedf",
            "marginLeft": 10,
            "width": "17%",
          },
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;
